bin/testsuite/tests/compiler/src/errors/compiler5104.swg
#global skipfmt
#global testerror "Err0328"

#[Swag.Safety(.All, .All, true)]
;